--- a/ansible/files/airflow/airflow.cfg
+++ b/ansible/files/airflow/airflow.cfg
@@ -16,7 +16,7 @@ executor = CeleryExecutor
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = mysql://${DB_USER}:${DB_PASSWORD}@${DB_URI}/airflow
+sql_alchemy_conn = postgres://${DB_USER}:${DB_PASSWORD}@${DB_URI}/${DB_TABLE}
 
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool.
@@ -62,7 +62,7 @@ dagbag_import_timeout = 30
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is use in automated emails that
 # airflow sends to point links to the right web server
-base_url = https://workflow.telemetry.mozilla.org
+base_url = http://localhost:8080
 
 # The ip specified when starting the web server
 web_server_host = 0.0.0.0
@@ -106,7 +106,7 @@ smtp_host = ${SMTP_HOST}
 smtp_port = 587
 smtp_user = ${SMTP_USER}
 smtp_password = ${SMTP_PASSWORD}
-smtp_mail_from = telemetry-alerts@airflow.dev.mozaws.net
+smtp_mail_from = airflow@opentrials.net
 
 [celery]
 # This section only applies if you are using the CeleryExecutor in
