Add DAG for FDA DAP processor

--- a/ansible/files/docker-compose.yml
+++ b/ansible/files/docker-compose.yml
@@ -71,6 +71,8 @@ worker:
     restart: always
     ports:
         - "8793:8793"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
         - AIRFLOW_HOME=/usr/local/airflow
         - AIRFLOW_ENABLE_AUTH
