Add smoke tests ensuring the DAGs can be loaded

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,8 @@ deps =
     -r{toxinidir}/requirements.txt
     pytest
 setenv =
-    PYTHONPATH = {toxinidir}
+    PYTHONPATH = {toxinidir}:{toxinidir}/dags
+    AIRFLOW_DAGS = {toxinidir}/dags
 commands =
     pytest {posargs}
 
