--- a/ansible/files/airflow/airflow.cfg
+++ b/ansible/files/airflow/airflow.cfg
@@ -50,7 +50,7 @@ load_examples = False
 plugins_folder = /usr/local/airflow/plugins
 
 # Secret key to save connection passwords in the db
-fernet_key = secret
+fernet_key = ${FERNET_KEY}
 
 # Whether to disable pickling dags
 donot_pickle = False
