Ignore virtualenv folder `env` when running tox
I also added it to .gitignore

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,10 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/dags
     AIRFLOW_DAGS = {toxinidir}/dags
 commands =
-    pytest {posargs}
+    py.test {posargs}
+
+[pytest]
+testpaths=tests
 
 [testenv:lint]
 deps =
@@ -23,3 +26,6 @@ commands =
 [flake8]
 ignore =
   E501
+exclude =
+  env,
+  .tox
