Use Python 2.7 instead of 3.5
The Docker image uses Python 2.7, and we have found a few Airflow bugs on 3.5,
so the hassle of using 3.5 doesn't seem worth it now.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py35
+    py27
     lint
 skipsdist = True
 
@@ -8,6 +8,7 @@ skipsdist = True
 deps =
     -r{toxinidir}/requirements.txt
     pytest
+    mock
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/dags
     AIRFLOW_DAGS = {toxinidir}/dags
