Fix scheduler container on Docker Cloud
We need to add the "scheduler" command so the executable becomes "airflow
scheduler".

--- a/ansible/files/docker-cloud.yml
+++ b/ansible/files/docker-cloud.yml
@@ -67,6 +67,7 @@ scheduler:
     - SMTP_PASSWORD
   links:
     - rabbitmq
+  command: scheduler
 
 worker:
   image: 'opentrials/opentrials-airflow:latest'
