[#698] Limit HRA collection times
opentrials/opentrials#698

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     -r{toxinidir}/requirements.txt
     pytest
     mock
+    freezegun
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/dags
     AIRFLOW_DAGS = {toxinidir}/dags
