--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+git://github.com/opentrials/incubator-airflow.git@opentrials#egg=airflow[async,password,crypto]
+git+git://github.com/opentrials/incubator-airflow.git@opentrials#egg=airflow[async,password,celery,crypto,postgres,hive,hdfs,jdbc]
 docker-py==1.10.4
 boto3==1.4.1
 retrying==1.3.3
