Add all env variables to Flower's container
Even though Flower doesn't wouldn't need things like the `AIRFLOW_ENABLE_AUTH`
to run, as it's independent from Airflow, it still runs the same code all other
containers run, and need to generate the `airflow.cfg`. This fixes that via
adding all env variables to the Flower container, and does some other
housekeeping fixes:

* Remove duplicate `FERNET_KEY` env variable
* Remove `AIRFLOW_HOME`, as it's set by default on the container
* Remove hardcoded `AIRFLOW_ENABLE_AUTH`, as it's set by Ansible when deploying

--- a/ansible/files/docker-cloud.yml
+++ b/ansible/files/docker-cloud.yml
@@ -6,9 +6,8 @@ webserver:
   image: 'opentrials/opentrials-airflow:latest'
   restart: always
   environment:
-    - AIRFLOW_HOME=/usr/local/airflow
-    - AIRFLOW_ENABLE_AUTH=true
     - EXECUTOR=Celery
+    - AIRFLOW_ENABLE_AUTH
     - FERNET_KEY
     - DB_URI
     - DB_USER
@@ -27,9 +26,8 @@ flower:
   image: 'opentrials/opentrials-airflow:latest'
   restart: always
   environment:
-    - AIRFLOW_HOME=/usr/local/airflow
-    - AIRFLOW_ENABLE_AUTH=true
     - EXECUTOR=Celery
+    - AIRFLOW_ENABLE_AUTH
     - FERNET_KEY
     - DB_URI
     - DB_USER
@@ -48,9 +46,8 @@ scheduler:
   image: 'opentrials/opentrials-airflow:latest'
   restart: always
   environment:
-    - AIRFLOW_HOME=/usr/local/airflow
-    - AIRFLOW_ENABLE_AUTH=true
     - EXECUTOR=Celery
+    - AIRFLOW_ENABLE_AUTH
     - FERNET_KEY
     - DB_URI
     - DB_USER
@@ -71,9 +68,8 @@ worker:
   volumes:
     - '/var/run/docker.sock:/var/run/docker.sock'
   environment:
-    - AIRFLOW_HOME=/usr/local/airflow
-    - AIRFLOW_ENABLE_AUTH=true
     - EXECUTOR=Celery
+    - AIRFLOW_ENABLE_AUTH
     - FERNET_KEY
     - DB_URI
     - DB_USER
