Add Volume with docker.sock to Worker container
This is needed for the worker to be able to run Docker containers itself
(needed for DockerOperator). It's already this way on production, but was
missing from development mode.

--- a/ansible/files/docker-compose.yml
+++ b/ansible/files/docker-compose.yml
@@ -64,6 +64,8 @@ services:
     worker:
         image: opentrials/opentrials-airflow
         restart: always
+        volumes:
+            - '/var/run/docker.sock:/var/run/docker.sock'
         depends_on:
             - scheduler
         environment:
