[#763] Save Airflow logs to S3
This sets the remote logs URL to a S3 bucket, making sure our logs persist even
if Airflow's host machine is destroyed. There's a caveat, though: we can't use
buckets with dots in the name (e.g. "datastore.opentrials.net"). This is
because Airflow still uses the older boto (not boto3) that has this issue (see
https://github.com/boto/boto/issues/2836 and
https://issues.apache.org/jira/browse/AIRFLOW-115).

Fixes opentrials/opentrials#763

--- a/ansible/files/docker-cloud.yml
+++ b/ansible/files/docker-cloud.yml
@@ -8,6 +8,8 @@ webserver:
   environment:
     - EXECUTOR=Celery
     - AIRFLOW_ENABLE_AUTH
+    - REMOTE_BASE_LOG_FOLDER
+    - REMOTE_LOG_CONN_ID
     - FERNET_KEY
     - DB_URI
     - DB_USER
@@ -28,6 +30,8 @@ flower:
   environment:
     - EXECUTOR=Celery
     - AIRFLOW_ENABLE_AUTH
+    - REMOTE_BASE_LOG_FOLDER
+    - REMOTE_LOG_CONN_ID
     - FERNET_KEY
     - DB_URI
     - DB_USER
@@ -48,6 +52,8 @@ scheduler:
   environment:
     - EXECUTOR=Celery
     - AIRFLOW_ENABLE_AUTH
+    - REMOTE_BASE_LOG_FOLDER
+    - REMOTE_LOG_CONN_ID
     - FERNET_KEY
     - DB_URI
     - DB_USER
@@ -70,6 +76,8 @@ worker:
   environment:
     - EXECUTOR=Celery
     - AIRFLOW_ENABLE_AUTH
+    - REMOTE_BASE_LOG_FOLDER
+    - REMOTE_LOG_CONN_ID
     - FERNET_KEY
     - DB_URI
     - DB_USER
