--- a/ansible/deploy_dockercloud.yml
+++ b/ansible/deploy_dockercloud.yml
@@ -15,6 +15,8 @@
     - name: update Docker Cloud stack
       shell: docker-cloud stack update --sync $DOCKERCLOUD_STACK -f {{ dockercloud_conf }}
       environment:
+        REMOTE_BASE_LOG_FOLDER: "{{ remote_base_log_folder }}"
+        REMOTE_LOG_CONN_ID: "{{ remote_log_conn_id }}"
         DB_URI: "{{ db_uri }}"
         DB_USER: "{{ db_user }}"
         DB_PASSWORD: "{{ db_password }}"
