--- a/ansible/deploy_local.yml
+++ b/ansible/deploy_local.yml
@@ -15,6 +15,8 @@
       environment:
         AIRFLOW_ENABLE_AUTH: False
         FERNET_KEY: 46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
+        REMOTE_BASE_LOG_FOLDER: "{{ remote_base_log_folder }}"
+        REMOTE_LOG_CONN_ID: "{{ remote_log_conn_id }}"
         DB_URI: "{{ db_uri }}"
         DB_USER: "{{ db_user }}"
         DB_PASSWORD: "{{ db_password }}"
