--- a/ansible/envs/dev.yml
+++ b/ansible/envs/dev.yml
@@ -2,5 +2,7 @@ db_uri: postgres
 db_user: airflow
 db_password: airflow
 db_table: airflow
+remote_base_log_folder: ""
+remote_log_conn_id: ""
 
 airflow_enable_auth: false
