--- a/ansible/files/airflow/airflow.cfg
+++ b/ansible/files/airflow/airflow.cfg
@@ -9,6 +9,15 @@ dags_folder = /usr/local/airflow/dags
 # The folder where airflow should store its log files. This location
 base_log_folder = /usr/local/airflow/logs
 
+# Airflow can store logs remotely in AWS S3 or Google Cloud Storage. Users
+# must supply a remote location URL (starting with either 's3://...' or
+# 'gs://...') and an Airflow connection id that provides access to the storage
+# location.
+remote_base_log_folder = ${REMOTE_BASE_LOG_FOLDER}
+remote_log_conn_id = ${REMOTE_LOG_CONN_ID}
+# Use server-side encryption for logs stored in S3
+encrypt_s3_logs = False
+
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor
 executor = CeleryExecutor
