--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,5 @@
--e git+git://github.com/apache/incubator-airflow.git@35e43f5067f4741640278b765c0e54e4fd45ffa3#egg=airflow[async,password,celery,crypto,postgres,hive,hdfs,jdbc]
-docker-py==1.10.4
+-e git+git://github.com/apache/incubator-airflow.git@35e43f5067f4741640278b765c0e54e4fd45ffa3#egg=airflow[async,password,celery,redis,crypto,postgres,hive,hdfs,jdbc,s3]
+docker-py
 boto3==1.4.1
 retrying==1.3.3
 requests==2.13.0
