--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
--e git+git://github.com/apache/incubator-airflow.git@35e43f5067f4741640278b765c0e54e4fd45ffa3#egg=airflow[async,password,celery,crypto,postgres,hive,hdfs,jdbc]
+-e git+git://github.com/apache/incubator-airflow.git@35e43f5067f4741640278b765c0e54e4fd45ffa3#egg=airflow[async,password,celery,redis,crypto,postgres,hive,hdfs,jdbc,s3]
 alembic==0.8.10
 amqp==2.1.4               # via kombu
 appdirs==1.4.3            # via setuptools
@@ -16,6 +16,7 @@ billiard==3.5.0.2         # via celery
 bitarray==0.8.1           # via impyla
 bleach==2.0.0
 boto3==1.4.1
+boto==2.46.1
 botocore==1.4.93          # via boto3, s3transfer
 celery==4.0.2             # via flower
 cffi==1.10.0              # via bcrypt, cryptography
@@ -24,18 +25,19 @@ configparser==3.5.0
 croniter==0.3.16
 cryptography==1.8.1
 dill==0.2.6
-docker-py==1.10.4
+docker-py==1.10.6
 docker-pycreds==0.2.1     # via docker-py
 docutils==0.13.1          # via botocore, python-daemon
 enum-compat==0.0.2        # via eventlet
 eventlet==0.21.0
+filechunkio==1.8
 flask-admin==1.4.1
 flask-bcrypt==0.7.1
 flask-cache==0.13.1
 flask-login==0.2.11
 flask-swagger==0.2.13
 flask-wtf==0.12
-Flask==0.11.1             # via flask-admin, flask-bcrypt, flask-cache, flask-login, flask-swagger, flask-wtf
+flask==0.11.1             # via flask-admin, flask-bcrypt, flask-cache, flask-login, flask-swagger, flask-wtf
 flower==0.9.1
 funcsigs==1.0.0
 future==0.16.0            # via pyhive
@@ -51,15 +53,15 @@ idna==2.5                 # via cryptography
 impyla==0.14.0
 itsdangerous==0.24        # via flask
 jaydebeapi==1.1.1
-Jinja2==2.8.1             # via flask, python-nvd3
+jinja2==2.8.1             # via flask, python-nvd3
 jmespath==0.9.2           # via boto3, botocore
-JPype1==0.6.2             # via jaydebeapi
+jpype1==0.6.2             # via jaydebeapi
 kombu==4.0.2              # via celery
 lockfile==0.12.2          # via python-daemon
 lxml==3.7.3
-Mako==1.0.6               # via alembic
+mako==1.0.6               # via alembic
 markdown==2.6.8
-MarkupSafe==1.0           # via jinja2, mako
+markupsafe==1.0           # via jinja2, mako
 numpy==1.12.1             # via pandas
 ordereddict==1.1          # via funcsigs
 packaging==16.8           # via cryptography, setuptools
@@ -79,7 +81,8 @@ python-editor==1.0.3      # via alembic
 python-nvd3==0.14.2
 python-slugify==1.1.4     # via python-nvd3
 pytz==2017.2              # via babel, celery, flower, pandas
-PyYAML==3.12              # via flask-swagger
+pyyaml==3.12              # via flask-swagger
+redis==2.10.5
 requests==2.13.0
 retrying==1.3.3
 s3transfer==0.1.10        # via boto3
@@ -94,11 +97,11 @@ thrift==0.9.3
 thriftpy==0.3.9           # via impyla
 tornado==4.2.0            # via flower
 unicodecsv==0.14.1
-Unidecode==0.4.20         # via python-slugify
+unidecode==0.4.20         # via python-slugify
 vine==1.1.3               # via amqp
 webencodings==0.5.1       # via html5lib
 websocket-client==0.40.0  # via docker-py
-Werkzeug==0.12.1          # via flask, flask-wtf
+werkzeug==0.12.1          # via flask, flask-wtf
 wtforms==2.1              # via flask-admin, flask-wtf
 zope.deprecation==4.2.0
 
