[#812] Use LocalExecutor instead of CeleryExecutor
There's a bug with the CeleryExecutor and DockerOperator where long-running
tasks are stuck in a "running" state, even after the Docker container finished.
I reported the bug on https://issues.apache.org/jira/browse/AIRFLOW-1131.

While that's not finished, we use the LocalExecutor as a workaround.

Fixes opentrials/opentrials#812

--- a/ansible/deploy_dockercloud.yml
+++ b/ansible/deploy_dockercloud.yml
@@ -15,13 +15,14 @@
     - name: update Docker Cloud stack
       shell: docker-cloud stack update --sync $DOCKERCLOUD_STACK -f {{ dockercloud_conf }}
       environment:
+        EXECUTOR: Local
+        AIRFLOW_ENABLE_AUTH: True
         REMOTE_BASE_LOG_FOLDER: "{{ remote_base_log_folder }}"
         REMOTE_LOG_CONN_ID: "{{ remote_log_conn_id }}"
         DB_URI: "{{ db_uri }}"
         DB_USER: "{{ db_user }}"
         DB_PASSWORD: "{{ db_password }}"
         DB_TABLE: "{{ db_table }}"
-        AIRFLOW_ENABLE_AUTH: True
         SMTP_HOST: "{{ smtp_host }}"
         SMTP_USER: "{{ smtp_user }}"
         SMTP_PASSWORD: "{{ smtp_password }}"
