--- a/ansible/files/docker-cloud.yml
+++ b/ansible/files/docker-cloud.yml
@@ -1,12 +1,8 @@
-redis:
-  image: 'redis:3.2.7'
-  restart: always
-
 webserver:
   image: 'opentrials/opentrials-airflow:latest'
   restart: always
   environment:
-    - EXECUTOR=Celery
+    - EXECUTOR
     - AIRFLOW_ENABLE_AUTH
     - REMOTE_BASE_LOG_FOLDER
     - REMOTE_LOG_CONN_ID
@@ -20,37 +16,13 @@ webserver:
     - SMTP_PASSWORD
   ports:
     - '80:8080'
-  links:
-    - redis
   command: webserver
-
-flower:
-  image: 'opentrials/opentrials-airflow:latest'
-  restart: always
-  environment:
-    - EXECUTOR=Celery
-    - AIRFLOW_ENABLE_AUTH
-    - REMOTE_BASE_LOG_FOLDER
-    - REMOTE_LOG_CONN_ID
-    - FERNET_KEY
-    - DB_URI
-    - DB_USER
-    - DB_PASSWORD
-    - DB_TABLE
-    - SMTP_HOST
-    - SMTP_USER
-    - SMTP_PASSWORD
-  links:
-    - redis
-  ports:
-    - '5555:5555'
-  command: flower
 
 scheduler:
   image: 'opentrials/opentrials-airflow:latest'
   restart: always
   environment:
-    - EXECUTOR=Celery
+    - EXECUTOR
     - AIRFLOW_ENABLE_AUTH
     - REMOTE_BASE_LOG_FOLDER
     - REMOTE_LOG_CONN_ID
@@ -62,30 +34,4 @@ scheduler:
     - SMTP_HOST
     - SMTP_USER
     - SMTP_PASSWORD
-  links:
-    - redis
   command: scheduler
-
-worker:
-  image: 'opentrials/opentrials-airflow:latest'
-  restart: always
-  ports:
-    - '8793:8793'
-  volumes:
-    - '/var/run/docker.sock:/var/run/docker.sock'
-  environment:
-    - EXECUTOR=Celery
-    - AIRFLOW_ENABLE_AUTH
-    - REMOTE_BASE_LOG_FOLDER
-    - REMOTE_LOG_CONN_ID
-    - FERNET_KEY
-    - DB_URI
-    - DB_USER
-    - DB_PASSWORD
-    - DB_TABLE
-    - SMTP_HOST
-    - SMTP_USER
-    - SMTP_PASSWORD
-  links:
-    - redis
-  command: worker
