[#812] Add `docker.sock` volume to the Scheduler
It's needed for the Scheduler to be able to run Docker containers (with the
`LocalExecutor`, the scheduler runs the tasks itself).

opentrials/opentrials#812

--- a/ansible/files/docker-cloud.yml
+++ b/ansible/files/docker-cloud.yml
@@ -21,6 +21,8 @@ webserver:
 scheduler:
   image: 'opentrials/opentrials-airflow:latest'
   restart: always
+  volumes:
+    - '/var/run/docker.sock:/var/run/docker.sock'
   environment:
     - EXECUTOR
     - AIRFLOW_ENABLE_AUTH
