--- a/ansible/files/airflow/airflow.cfg
+++ b/ansible/files/airflow/airflow.cfg
@@ -161,10 +161,10 @@ job_heartbeat_sec = 5
 scheduler_heartbeat_sec = 5
 
 # Statsd (https://github.com/etsy/statsd) integration settings
-# statsd_on =  False
-# statsd_host =  localhost
-# statsd_port =  8125
-# statsd_prefix = airflow
+statsd_on = ${STATSD_ENABLED}
+statsd_host = statsd
+statsd_port = 8125
+statsd_prefix = airflow
 
 [mesos]
 # Mesos master address which MesosExecutor will connect to.
