[#812] Revert back to using CeleryExecutor instead of LocalExecutor
We solved the bug https://issues.apache.org/jira/browse/AIRFLOW-1131 by
creating a new DockerCLIOperator, so we can return using the CeleryExecutor.

Reverts 99106c3f.

opentrials/opentrials#812

--- a/ansible/deploy_dockercloud.yml
+++ b/ansible/deploy_dockercloud.yml
@@ -15,7 +15,7 @@
     - name: update Docker Cloud stack
       shell: docker-cloud stack update --sync $DOCKERCLOUD_STACK -f {{ dockercloud_conf }}
       environment:
-        EXECUTOR: Local
+        EXECUTOR: Celery
         AIRFLOW_ENABLE_AUTH: True
         STATSD_ENABLED: True
         REMOTE_BASE_LOG_FOLDER: "{{ remote_base_log_folder }}"
