--- a/ansible/files/docker-cloud.yml
+++ b/ansible/files/docker-cloud.yml
@@ -1,3 +1,7 @@
+redis:
+  image: 'redis:3.2.7'
+  restart: always
+
 webserver:
   image: 'opentrials/opentrials-airflow:latest'
   restart: always
@@ -19,6 +23,7 @@ webserver:
     - '80:8080'
   links:
     - datadog-agent:statsd
+    - redis
   command: webserver
 
 scheduler:
@@ -42,7 +47,58 @@ scheduler:
     - SMTP_PASSWORD
   links:
     - datadog-agent:statsd
-  command: scheduler
+    - redis
+  command: scheduler --num-runs 10
+
+flower:
+  image: 'opentrials/opentrials-airflow:latest'
+  restart: always
+  environment:
+    - EXECUTOR
+    - AIRFLOW_ENABLE_AUTH
+    - STATSD_ENABLED
+    - REMOTE_BASE_LOG_FOLDER
+    - REMOTE_LOG_CONN_ID
+    - FERNET_KEY
+    - DB_URI
+    - DB_USER
+    - DB_PASSWORD
+    - DB_TABLE
+    - SMTP_HOST
+    - SMTP_USER
+    - SMTP_PASSWORD
+  links:
+    - datadog-agent:statsd
+    - redis
+  ports:
+    - '5555:5555'
+  command: flower
+
+worker:
+  image: 'opentrials/opentrials-airflow:latest'
+  restart: always
+  ports:
+    - '8793:8793'
+  volumes:
+    - '/var/run/docker.sock:/var/run/docker.sock'
+  environment:
+    - EXECUTOR
+    - AIRFLOW_ENABLE_AUTH
+    - STATSD_ENABLED
+    - REMOTE_BASE_LOG_FOLDER
+    - REMOTE_LOG_CONN_ID
+    - FERNET_KEY
+    - DB_URI
+    - DB_USER
+    - DB_PASSWORD
+    - DB_TABLE
+    - SMTP_HOST
+    - SMTP_USER
+    - SMTP_PASSWORD
+  links:
+    - datadog-agent:statsd
+    - redis
+  command: worker
 
 datadog-agent:
   image: 'datadog/docker-dd-agent:latest'
